# fakenews

./: Makefile  README.md  pyproject.toml
app/: config.py  main.py
