[tool.poetry]
name = "fakenews"
version = "0.1.0"
description = ""
authors = ["Stephen Spencer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
tensorflow = "<2.16"
scikit-learn = "^1.3.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
